# plugin-goldsrc-addons

./: .gitignore  Cargo.toml  Makefile  README.md  README.ru.md  build.rs  post.md
.github/workflows/: build.yml  release.yml
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: env.d.ts  index.ts  types.ts
frontend/src/__tests__/: naming.test.ts  pawn.test.ts  rcon-parse.test.ts  source.test.ts  status.test.ts
frontend/src/api/: gameap.ts  plugin.ts
frontend/src/components/: ConfigModal.vue  InstallModal.vue  ModsTab.vue  PlatformCard.vue  PluginList.vue  SourceModal.vue
frontend/src/lib/: naming.ts  pawn.ts  rcon-parse.ts  source.ts  status.ts
src/: host_api.rs  http.rs  lib.rs  model.rs  router.rs
src/goldsrc/: amxxpc.rs  ini.rs  liblist.rs  mod.rs  moddir.rs  paths.rs
src/handlers/: add.rs  attributes.rs  compile.rs  ctx.rs  mod.rs  remove.rs  state.rs  tests.rs  toggle.rs
