[package]
name = "goldsrc-addons"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "GameAP plugin: manage Metamod and AMX Mod X on GoldSource servers"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gameap-plugin-sdk = { path = "../gameap-proto/rust/gameap-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
